[package]
name = "reality_azure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

azure_storage = "0.7.0"
azure_identity = "0.7.0"
azure_storage_blobs = "0.7.0"
azure_core = "0.6.0"
reality = { git = "https://github.com/juliusl/reality.git", branch="pr/protocol" }
bytes = "1.2.1"
tokio = "1.20.1"
futures-lite = "1.12.0"
futures = "0.3.25"
tracing = "0.1.37"
