[package]
name = "reality_azure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# azure_storage = "0.7.0"
# azure_identity = "0.7.0"
# azure_storage_blobs = "0.7.0"
# azure_core = "0.6.0"
azure_storage = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/fix-header" }
azure_identity = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/fix-header" }
azure_storage_blobs = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/fix-header" }
azure_core = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/fix-header" }

reality = { git = "https://github.com/juliusl/reality.git", branch="pr/protocol-v2" }
bytes = "1.2.1"
tokio = { version = "1.20.1", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
futures-lite = "1.12.0"
futures = "0.3.25"
tracing = "0.1.37"
flate2 = "1.0.24"
tokio-tar = "0.3.0"
tokio-stream = "0.1.11"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
